** Assault Commander Jorb
*** Converted to new engine.
*** New: Added enrage timer.
*** New: Timer and alert for Forceful Impact.
*** New: Added Alert and duration countdown for Paralyzing Grasp.
** Joloral Ragetide
*** Converted to new engine.
*** New: Added Timer and Alert for Panic Attack.
*** New: Added Alert for Panic Attack duration.
** Isskal
*** Converted to new engine.
** Priestess Hydriss
*** Converted to new engine.
* French Translation
** New: Added Soulrenders Grasp.
* German Translations
** Estrode
*** Change: Herrin des Risses.
** Grugonim
*** New: Herzstillstandsgift.
** Inquisitor Garau
*** New: Gletscherschild.
** Inwar Darktide
*** New: Sog.
*** New: Faulkriefer.
*** New: Stinkender Schleim.
*** New: Krabbelklauen-Zämker.
*** New: Gezeitenbewahrer.
** Aylios
*** New: Geistiger Verfall.
*** New: Hauch des Wahnsinns.
*** New: Erstickungskugel.
*** New: Akylios taucht auf.
*** New: Akylios taucht unter.
** Plutonus
*** New: Wandelnder Schlaf.
** Herald Gaurath
*** New: Atem der Leere.
*** New: Auferstehung der Toten.
*** New: Botschaft der Not.
** Alsbeth the Discordant
*** New: Seelenbestrafung.
*** New: Boden der Zwietracht.
*** New: Seelenzerstörung.
*** New: Zwietracht-Meteor.
*** New: Zwietracht-Säule.
*** New: Seelen-Vorbote.
*** New: Seelen-Dieb.
*** New: Seelen-Magus.
** Assault Commander Jorb
*** New: Machtvoller Schlag.
*** New: Stillgestanden!.
** General Silgen
*** New: Hitzetrichter.
*** New: Verbrennen.
*** New: In Flammen verankert.
----
v0.8.5
* River of Souls
** Dark Focus
*** Fixed: Error spam on pull.
** Herald Gaurath
*** Fixed: Error spam on pull.
** Plutonus the Immortal
*** Fixed: Error on Phase 1 to Phase 2 transition.
** Alsbeth the Discordant
*** Fixed: Error from Air to Ground phase.
*** Change: Enrage time to 18m.
----
v0.8.4﻿﻿
* Hammerknell
** Matron Zamira
*** Change: Phase 2 is now from 40-30%
*** New: Added Phase 3, starting at 30%
** Soulrender Zilas
*** Change: Reduced timer for Grasp slightly.
* River of Souls